fixed script link

--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
         <script src="js/three.js"></script>
         <script src="js/OrbitControls.js"></script>
         <script src="js/Frame.js"></script>
-        <script src="/script.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
