--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
 
             <div class="attr location"> 
-                <input type="range" min="0" max="20" value="0" class="slider" id="location">
+                <input type="range" min="0" max="2" value="0" class="slider" id="location">
             </div>
 
             <div class="controls">
@@ -27,7 +27,7 @@
                 <button class='play'>play</button>
                 <button class='next'>&gt;</button>
             </div>
-            <div class="attr newFrame">
+            <div class="attr newFrame">     
                 <input type="button" id="newFrame" value="New Frame">       
             </div>
             <div class="attr checkbox keep">
@@ -35,7 +35,7 @@
                 <div id="boxText">Keep Last Frame</div>
             </div>
             <div class="attr area">
-            <textarea rows="15" cols="25" id ="data"name="comment" form="usrform"> </textarea>
+            <textarea rows="15" cols="25" id ="data"name="comment" spellcheck="false"> </textarea>
             </div>
             <div class="attr read">
                 <input type="button" id="read" value="Read Data">       
