--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset=utf-8>
-        <title>Starting with webGL</title>
+        <title>LED Animation</title>
         <link rel="stylesheet" href="style.css">
         <style>
             body { margin: 0; }
